--- a/.github/workflows/principal.yml
+++ b/.github/workflows/principal.yml
@@ -26,15 +26,15 @@ jobs:
         sudo npm run testes-unitarios
     # Cobertura de código: Trava o GitHub Actions inteiro por algum motivo.
     # Reabilitar quando conseguirmos descobrir a causa.
-    # - uses: ArtiomTr/jest-coverage-report-action@v2
-    #   id: coverage
-    #   if: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == 'DesignLiquido/delegua' }}
-    #   with:
-    #     github-token: ${{ secrets.GITHUB_TOKEN }}
-    #     test-script: yarn testes-unitarios
-    #     package-manager: yarn
-    #     output: report-markdown
-    # - uses: marocchino/sticky-pull-request-comment@v2
-    #   if: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == 'DesignLiquido/delegua' }}
-    #   with:
-    #     message: ${{ steps.coverage.outputs.report }}
+    - uses: ArtiomTr/jest-coverage-report-action@v2
+      id: coverage
+      if: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == 'DesignLiquido/visualg' }}
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        test-script: yarn testes-unitarios
+        package-manager: yarn
+        output: report-markdown
+    - uses: marocchino/sticky-pull-request-comment@v2
+      if: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == 'DesignLiquido/visualg' }}
+      with:
+        message: ${{ steps.coverage.outputs.report }}
