--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "publicar-docs": "yarn gerar-documentacao-tecnica && copyfiles -V ./recursos/**/* ./docs && gh-pages -d docs",
         "publicar-npm": "npm publish ./dist --access public",
         "testes-unitarios": "jest --coverage",
+        "testes-unitarios:pr": "jest --ci --coverage --json --outputFile=test_reports/ci_coverage.json",
         "testes-unitarios:insignias": "jest-coverage-badges --output ./recursos/imagens",
         "observar-testes-unitarios": "jest --watchAll",
         "observar-testes-unitarios-com-coverage": "jest --coverage --watchAll",
