--- a/.github/workflows/principal.yml
+++ b/.github/workflows/principal.yml
@@ -23,18 +23,18 @@ jobs:
         sudo npm install
     - name: Testes unitários
       run: |
-        sudo npm run testes-unitarios:pr
+        sudo npm run testes-unitarios
     # Cobertura de código: Trava o GitHub Actions inteiro por algum motivo.
     # Reabilitar quando conseguirmos descobrir a causa.
-    # - name: Cobertura de Código
-    #  uses: MishaKav/jest-coverage-comment@main
-    - uses: ArtiomTr/jest-coverage-report-action@v2
-      id: coverage
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        test-script: yarn testes-unitarios
-        package-manager: yarn
-        output: report-markdown
-    - uses: marocchino/sticky-pull-request-comment@v2
-      with:
-        message: ${{ steps.coverage.outputs.report }}
+    - name: Cobertura de Código
+      uses: MishaKav/jest-coverage-comment@main
+    # - uses: ArtiomTr/jest-coverage-report-action@v2
+    #   id: coverage
+    #   with:
+    #     github-token: ${{ secrets.GITHUB_TOKEN }}
+    #     test-script: yarn testes-unitarios
+    #     package-manager: yarn
+    #     output: report-markdown
+    # - uses: marocchino/sticky-pull-request-comment@v2
+    #   with:
+    #     message: ${{ steps.coverage.outputs.report }}
