--- a/.github/workflows/principal.yml
+++ b/.github/workflows/principal.yml
@@ -24,10 +24,11 @@ jobs:
     - name: Testes unitários
       run: |
         sudo npm run testes-unitarios
-    # Cobertura de código: Trava o GitHub Actions inteiro por algum motivo.
-    # Reabilitar quando conseguirmos descobrir a causa.
     - name: Cobertura de Código
       uses: MishaKav/jest-coverage-comment@main
+    # Os pacotes abaixo continuam dando o seguinte problema:
+    # https://github.com/ArtiomTr/jest-coverage-report-action/issues/233
+    # A solução dada pelo autor não resolve o problema.
     # - uses: ArtiomTr/jest-coverage-report-action@v2
     #   id: coverage
     #   with:
