--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
     "name": "@designliquido/visualg",
     "description": "Dialeto de VisuAlg baseado em Delégua e TypeScript",
+    "version": "0.0.0",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/DesignLiquido/visualg/issues"
+    },
+    "homepage": "https://github.com/DesignLiquido/visualg#readme",
+    "publishConfig": {
+        "access": "public",
+        "registry": "https://registry.npmjs.org"
+    },
     "scripts": {
-        "empacotar": "rimraf ./dist && tsc && copyfiles -V ./bin/delegua ./bin/delegua.cmd ./dist && copyfiles -V ./package.json ./dist/bin && copyfiles -V ./README.md ./dist",
+        "empacotar": "yarn rimraf ./dist && tsc && yarn copyfiles -V ./package.json ./dist && yarn copyfiles -V ./README.md ./dist",
         "gerar-documentacao-tecnica": "typedoc --out docs index.ts",
         "publicar-docs": "yarn gerar-documentacao-tecnica && copyfiles -V ./recursos/**/* ./docs && gh-pages -d docs",
         "publicar-npm": "npm publish ./dist --access public",
@@ -14,11 +24,15 @@
         "deixar-codigo-bonito": "prettier --config .prettierrc --write fontes/**/*.ts"
     },
     "dependencies": {
-        "@designliquido/delegua": "^0.32.2"
+        "@designliquido/delegua": "^0.32.2",
+        "lodash.clonedeep": "^4.5.0"
     },
     "devDependencies": {
         "@types/jest": "^29.5.12",
+        "@types/lodash": "^4.14.202",
+        "copyfiles": "^2.4.1",
         "jest": "^29.7.0",
+        "rimraf": "^5.0.5",
         "ts-jest": "^29.0.5",
         "ts-node": "^10.9.1",
         "typescript": "^4.9.4"
