--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     },
     "dependencies": {
         "@designliquido/delegua": "^0.32.2",
-        "lodash.clonedeep": "^4.5.0"
+        "lodash": "^4.17.21"
     },
     "devDependencies": {
         "@types/jest": "^29.5.12",
