- Não usando mais o diretório `fontes`; - Configurações adicionais no `tsconfig.json` para reconhecer um módulo linkado corretamente.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
 {
     "compilerOptions": {
+        "baseUrl": ".",
+        "paths": {
+            "@designliquido/delegua": ["node_modules/@designliquido/delegua/fontes"],
+            "@designliquido/delegua/*": ["node_modules/@designliquido/delegua/fontes/*"]
+        },
         "outDir": "dist",
         "module": "CommonJS",
         "target": "es2017",
