--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
         "deixar-codigo-bonito": "prettier --config .prettierrc --write fontes/**/*.ts"
     },
     "dependencies": {
-        "@designliquido/delegua": "^0.33.0",
+        "@designliquido/delegua": "^0.33.1",
         "lodash": "^4.17.21"
     },
     "devDependencies": {
         "@types/jest": "^29.5.12",
         "@types/lodash": "^4.14.202",
+        "@types/node": "^20.11.17",
         "copyfiles": "^2.4.1",
         "jest": "^29.7.0",
         "rimraf": "^5.0.5",
