- Correções vindas do núcleo de Delégua; - Atualização do núcleo de Delégua para a versão 0.33.4; - Ajustes em como gerar a transpilação para este pacote.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,11 @@
 {
     "compilerOptions": {
-        "baseUrl": ".",
-        "paths": {
-            "@designliquido/delegua": ["node_modules/@designliquido/delegua/fontes"],
-            "@designliquido/delegua/*": ["node_modules/@designliquido/delegua/fontes/*"]
-        },
         "outDir": "dist",
         "module": "CommonJS",
         "target": "es2017",
         "rootDir": "fontes",
+        "sourceRoot": "fontes",
+        "mapRoot": "dist",
         "allowJs": true,
         "sourceMap": true,
         "declaration": true,
