--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "rimraf": "^5.0.5",
         "ts-jest": "^29.0.5",
         "ts-node": "^10.9.1",
+        "typedoc": "^0.25.8",
         "typescript": "^4.9.4"
     }
 }
